# simpleC

./: .gitignore  README.md  gradle.properties  import-summary.txt  local.properties  settings.gradle
aar/: terminal-emulator-release.aar  terminal-view-release.aar
app/: build.gradle  simpleC_1.0.1.apk  simpleC_1.0.2.apk  simpleC_1.0.apk  simpleC_1.1.2.apk  simpleC_1.2.10.apk  simpleC_1.2.11.apk  simpleC_1.2.12.apk  simpleC_1.2.13.apk  simpleC_1.2.14.apk  simpleC_1.2.15.apk  simpleC_1.2.16.apk  simpleC_1.2.3.apk  simpleC_1.2.5.apk  simpleC_1.2.7.apk  simpleC_1.2.8.apk  simpleC_1.2.9.apk
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: header  help.md
app/src/main/res/layout/: activity_splash.xml  compile_error_layout.xml  compile_option_layout.xml  file_list_layout.xml  main.xml  preference_layout.xml  (+1 more)
captures/: MulCode_2017.10.26_13.51.txt  com.luoye.simpleC_2017.10.26_14.14.txt
emulatorview/: build.gradle
emulatorview/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
libtermexec/: build.gradle
libtermexec/src/main/: AndroidManifest.xml
libtermexec/src/main/cpp/: CMakeLists.txt  process.cpp
libtermexec/src/main/jni/: Android.mk  process.cpp  process.h  unuse.c
resource/: build.gradle
resource/src/main/: AndroidManifest.xml
term/: build.gradle
term/src/main/: AndroidManifest.xml
term/src/main/cpp/: CMakeLists.txt
term/src/main/jni/: Android.mk  Application.mk  fileCompat.cpp  termExec.cpp
terminal-emulator-release/: build.gradle
terminal-view-release/: build.gradle
(+172 files in other folders)
